# tergite-autocalibration

./: .env  .example.env  .gitignore  .gitlab-ci.yml  .pylintrc  404.html  CHANGELOG.md  CMA_ES.ipynb  CONTRIBUTING.md  CREDITS.md  Downconverter Trouble Shooting.ipynb  MANIFEST.in  README.md  Retrieve app logs script.ipynb  Schedules and Pulses.ipynb  TIMING_TABLE_qubit_01_spectroscopy_pulsed.html  TIMING_TABLE_rabi_oscillations.html  TIMING_TABLE_rabi_oscillations_12.html  TIMING_TABLE_resonator_spectroscopy.html  TIMING_TABLE_resonator_spectroscopy_1.html  TIMING_TABLE_resonator_spectroscopy_2.html  TIMING_TABLE_ro_frequency_optimization.html  adaptive_motzoi_schedule.py  adibatic reset.ipynb  bitbucket-pipelines.yml  calib_test.ipynb  calib_test_backup.ipynb  calibration_analysis.ipynb  callbaks_test.py  clusterA.py  cluster_reset.py  compiled_instructions_20240110.py  config_DC_flux.py  config_TL.py  coupler_mapping.py  cz.ipynb  dot-env-template.txt  dummy.ipynb  dump.rdb  example.py  (+39 more)
analysis/: T1_analysis.py  base.py  check_cliffords_analysis.py  coupler_spectroscopy_analysis.py  cz_calibration_analysis.py  cz_chevron_analysis.py  cz_inspect.py  motzoi_analysis.py  n_rabi_analysis.py  optimum_ro_amplitude_analysis.py  optimum_ro_frequency_analysis.py  punchout_analysis.py  qubit_spectroscopy_analysis.py  qubit_spectroscopy_multidim.py  rabi_analysis.py  ramsey_analysis.py  randomized_benchmarking_analysis.py  reset_calibration_analysis.py  resonator_spectroscopy_analysis.py  state_discrimination_analysis.py  tac_quantify_analysis.py  tof_analysis.py
bring_up/: bring_up_config.toml  compile.py  load_wiring.py  singelQubit.ipynb  singleQubit.py  sweeps.py
calibration_schedules/: DRAG_amplitude.py  SSRO_amplitude.py  T1.py  T1_bak.py  XY_crosstalk.py  check_cliffords.py  cz_calibration.py  cz_chevron.py  cz_chevron_reversed copy.py  cz_chevron_reversed.py  drag_amplitude.py  measurement_base.py  motzoi_paramerter.py  motzoi_parameter.py  n_rabi_oscillations.py  punchout.py  rabi_oscillations.py  ramsey_detunings.py  ramsey_fringes.py  randomized_benchmarking.py  randomized_benchmarking_schedule.py  reset_calibration.py  resonator_spectroscopy.py  ro_amplitude_optimization.py  ro_frequency_optimization.py  state_discrimination.py  states_discrimination.py  time_of_flight.py  two_tone_multidim.py  two_tone_multidim_loop_reversed.py  two_tones_spectroscopy.py
config/: VNA_LOKIB_values.py  device_config.toml  hardware_config.json
config_dir/: HARDWARE_CONFIGURATION_LOKIB_25092023.json  device_config.toml
config_files/: HARDWARE_CONFIGURATION.json  HARDWARE_CONFIGURATION_15092023.json  HARDWARE_CONFIGURATION_25092023.json  HARDWARE_CONFIGURATION_LOKIA_20231120.json  HARDWARE_CONFIGURATION_LOKIA_COUPLERS.json  IF_hw_config.py  LO_hw_config.py  VNA_LOKIB_values.py  VNA_values.py  coupler_config.py  coupler_values.py  device_config.toml  pretty_hw.py  settings.py  test_hw_config.py  transmons_config.toml
configs/: configs-readme.md  device_config.toml  hardware_config.json
coupler20231026/: dataset.hdf5
data/: data-readme.md
data_directory/: test  test2
development/: development-readme.md  rerun_analysis.ipynb  start_calibration.py
docs/: _quarto.yml  available_nodes.html  configuration_files.html  developer_guide.html  getting_started.html  index.html  index.md  new_node_creation.html  new_node_creation.qmd  node_types.html  operation.html  redis_variable_names.embed-preview.html  redis_variable_names.embed.html  redis_variable_names.html  redis_variable_names.qmd  search.json  tac_docs.html  troubleshooting.html  unit_tests.html
docs_editable/: _quarto.yml  available_nodes.qmd  developer_guide.qmd  getting_started.qmd  index.qmd  redis_variable_names.embed.ipynb  redis_variable_names.qmd  troubleshooting.qmd
documentation/: .gitignore  _quarto.yml  available_nodes.qmd  configuration_files.qmd  developer_guide.qmd  getting_started.qmd  home.qmd  new_node_creation.qmd  node_types.qmd  operation.qmd  qubit_spectroscopy_node.qmd  resonator_spectroscopy_node.qmd  unit_tests.qmd
javascripts/: mathjax.js
libraries/oqs-licensing/: pyproject.toml  setup.py
logger/: tac_logger.py
mkdocs/: troubleshooting.md
nodes/: base_node.py  coupler_nodes.py  graph.py  node.py  node_mwe.py  qubit_control_nodes.py  readout_nodes.py
notebooks/: 20240313-180404-170-43dc56-cz_chevron_all_results.py  20240313-181558-919-72e652-cz_chevron_all_results.py  20240314-002822-693-887d9f-cz_chevron_all_results.py  Schedules and Pulses.ipynb  advanced_sequencing.ipynb  basic_sequencing_QCM.ipynb  calib_test.ipynb  calib_test_backup.ipynb  mixercorrectionLokeC25QFL.csv  plot_cz.ipynb  plot_cz_chevron.ipynb  reset.ipynb  reset_plot_202403.ipynb
present/: automaticCalibration.html  automaticCalibration.ipynb
quantifiles/: __init__.py  data.py  data_handling.py  generate_mparam_ui_box.py  main.py  path.py  plot_mgr.py  units.py  utils.py  watcher.py
quantify_schedules_profiling/: compilation_times  profiling_hw_config.py  punchout.py  rabi_oscillations.py  sched_profiling.py
schedules/: 20230926-163057-371-4aefce_q16mw_q16.01.json  20230926-163057-419-015230_q17mw_q17.01.json  20230926-163057-466-6396c0_q19mw_q19.01.json  20230926-163057-514-cd1d57_q21mw_q21.01.json  20230926-163057-563-8b552c_q22mw_q22.01.json  20230926-163057-613-68f9bf_q23mw_q23.01.json  20230926-163057-662-a76338_q25mw_q25.01.json  20230926-163057-685-c161fb_q16res_q16.ro.json  20230926-163057-703-c404d9_q17res_q17.ro.json  20230926-163057-827-c5a83c_q19res_q19.ro.json  20230926-163057-846-2b5eaa_q21res_q21.ro.json  20230926-163057-864-23042d_q22res_q22.ro.json  20230926-163057-883-b4758f_q23res_q23.ro.json  20230926-163057-901-ee3f6c_q25res_q25.ro.json  20230926-163548-366-d404a4_q11res_q11.ro.json  20230926-163548-379-81c85b_q12res_q12.ro.json  20230926-163548-390-a62ce2_q13res_q13.ro.json  20230926-163548-401-af0d02_q14res_q14.ro.json  20230926-163548-412-869444_q15res_q15.ro.json  20230926-164102-621-ebc450_q11mw_q11.01.json  20230926-164102-733-8e0d45_q12mw_q12.01.json  (+667 more)
scripts/: gen_ref_pages.py
(+1656 files in other folders)
