# This code is part of Tergite
#
# (C) Copyright Chalmers Next Labs 2024
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oqs-licensing"
version = "1.0.10"
description = ""
readme = "README.md"
authors = [
  { name = "Stefan Hill", email = "stefanhi@chalmers.se" }
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["oqs_licensing"]